--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.3",
+    "husky": "4.3.8",
     "jest": "27.0.3",
     "jest-axe": "5.0.1",
     "jest-environment-node": "27.4.4",
