chore: eslint rules

--- a/packages/taro-vant-ui/tsconfig.json
+++ b/packages/taro-vant-ui/tsconfig.json
@@ -5,8 +5,8 @@
     "module": "commonjs",
     "baseUrl": "./",
     "typeRoots": [
+      "./types",
       "node_modules/@types",
-      "types"
     ]
   }
 }
