--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
     "eslint-config-o2team": "^0.1.7",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-custom-alias": "^1.2.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "husky": "4.3.8",
-    "jest": "27.0.3",
-    "jest-axe": "5.0.1",
-    "jest-environment-node": "27.4.4",
-    "jest-image-snapshot": "4.5.1",
-    "jest-puppeteer": "6.0.0",
-    "lerna": "^4.0.0",
+    "lerna": "^3.20.2",
     "lint-staged": "^10.1.2",
     "prettier": "^2.0.3",
-    "typescript": "^4.5.5"
+    "rimraf": "^3.0.2",
+    "stylelint": "^13.3.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.16.0",
+    "typescript": "~3.7.2"
   },
   "husky": {
     "hooks": {
