chore: eslint rules

--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "@typescript-eslint/parser": "^2.26.0",
     "conventional-changelog-cli": "^2.0.31",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "6.8.0",
     "eslint-config-o2team": "^0.1.7",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
     "husky": "4.3.8",
     "lerna": "^3.20.2",
     "lint-staged": "^10.1.2",
