--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "private": false,
+  "private": true,
   "name": "@uzhan/taro-vant-ui",
-  "version": "0.0.8-alpha.2",
   "description": "vant ui for Taro",
   "author": "uzhan.net.cn",
   "homepage": "https://github.com/uzhan/taro-vant-ui#readme",
