--- a/packages/taro-vant-ui/package.json
+++ b/packages/taro-vant-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taro-vant-ui",
+  "name": "@uzhan/taro-vant-ui",
   "version": "0.0.8-alpha.2",
   "description": "vant ui for taro",
   "module": "dist/index.esm.js",
