feat: lerna version 0.0.8-alpha.3

--- a/packages/taro-vant-docs/package.json
+++ b/packages/taro-vant-docs/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "taro-vant-docs",
-  "version": "1.0.0-beat",
+  "version": "0.0.8",
   "description": "taro vant ui docs",
   "keywords": [
     "taro",
