--- a/packages/taro-vant-ui/package.json
+++ b/packages/taro-vant-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uzhan/taro-vant-ui",
-  "version": "0.0.8-alpha.3",
+  "version": "0.0.8",
   "description": "vant ui for taro",
   "module": "dist/index.esm.js",
   "main": "dist/index.js",
